<resources>
    <string name="app_name">ClimbTogether</string>
    <string name="test_btn">測試專用</string>
    <string name="home">主頁</string>
    <string name="mountain">百岳</string>
    <string name="equipment">裝備</string>
    <string name="discuss">討論</string>
    <string name="yu_shan_national_park">玉山國家公園</string>
    <string name="snow_mt_national_park">雪山國家公園</string>
    <string name="taruku_national_park">太魯閣國家公園</string>
    <string name="young_ming_national_par">陽明山國家公園</string>
    <string name="climb_together">Climb Together</string>
    <string name="all">全部</string>
    <string name="a_level">A級</string>
    <string name="b_level">B級</string>
    <string name="c_level">C級</string>
    <string name="c_plus_level">C+級</string>
    <string name="d_level">D級</string>
    <string name="e_level">E級</string>
    <string name="mountain_notice">A 級：一般健行路線，活動天數約需 1-3 天。\nB 級：中級縱走路線，活動天數約需 4-5 天或活動天數約需 1-3 天但有危險地形。\nC 級：高級縱走路線，活動天數約需 5 天以上。\nC+級：高級縱走路線，有垂降及攀岩地形。\n雪季期間分成 2 級\nD 級：雪地健行及縱走，雪季管制期間有條件開放之路線。\nE 級：雪季管制期間暫停開放之路線。</string>
    <string name="watch_more">MORE</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="member">會員中心</string>

    <string name="client_id" translatable="false">687642928001-s3jkcc6kc3o20ggq2e7ut8tf685mmmq6.apps.googleusercontent.com</string>
    <string name="question">問題</string>
    <string name="search_no_data">暫時無資料唷(之後會再更新..敬請期待)</string>
    <string name="member_notice">免費註冊/登入會員後,即可享所有功能唷</string>
    <string name="login_and_registered">註冊/登入</string>
    <string name="favorite_mt">百岳戰績</string>
    <string name="search_bed">床鋪查詢</string>
    <string name="apply_mt">申請入園證</string>
    <string name="center_weather">中央氣象局</string>
    <string name="login_page">登入/註冊</string>
    <string name="login_to_user_all_function">登入後使用完整功能</string>
    <string name="email">電子郵件</string>
    <string name="password">密碼</string>
    <string name="edit_email_style">格式 : 電子郵件(均以小寫,謝謝)</string>
    <string name="input_password">輸入密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="sign_out">登出</string>
    <string name="sign_in_with_google">使用Google Email進行登入</string>
    <string name="other_way_to_login">其他登入方式</string>
    <string name="confirm_to_sign_out">確定要登出?</string>
    <string name="login_fail">登入失敗 : </string>
    <string name="display_name">暱稱</string>
    <string name="input_display_name">輸入暱稱</string>
    <string name="processing">處理中....</string>
    <string name="google_login_fail">Google 登入失敗 : </string>
    <string name="no_sort">默認排序</string>
    <string name="order_by_time">日期排序</string>
    <string name="order_by_time_not_far">日期由遠到近</string>
    <string name="login_notice">此功能僅限會員使用\n立即「免費註冊」或登入即可增加戰績</string>
    <string name="login_notice_discuss">此功能僅限會員使用\n立即「免費註冊」或登入即可參加討論</string>
    <string name="login_notice_chat">此功能僅限會員使用\n立即「免費註冊」或登入即可隨時聊天唷</string>
    <string name="choose_sort_mode">選擇排版樣式 : </string>
    <string name="port_view">直版面</string>
    <string name="land_view">橫版面</string>
    <string name="on_favorite_data">沒有任何的百岳紀錄唷,快去爬...</string>
    <string name="upload_photo">上傳照片</string>
    <string name="watch_information">查看資料</string>
    <string name="share_experience">分享心得</string>
    <string name="modify_time">修正攻頂時間</string>
    <string name="please_wait">上傳中... 請稍後</string>
    <string name="remove_data">移除戰績</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_success">刪除成功...</string>
    <string name="delete_fail">刪除失敗...</string>
    <string name="please_wait_progressing">處理中...請稍後</string>
    <string name="send">送出</string>
    <string name="upload_success">上傳成功</string>
    <string name="invite_process">已寄出邀請</string>
    <string name="friend_manager">好友管理</string>
    <string name="friend_invite">好友邀請</string>
    <string name="add_successful">新增成功</string>
    <string name="friend">好友</string>
    <string name="chat">聊天</string>
    <string name="empty_message">請輸入對話內容</string>
    <string name="personal_chat">聊天</string>
    <string name="no_chat_data">無任何聊天資訊唷...快去跟好友聊天吧.</string>
    <string name="delete">移除好友</string>
    <string name="warning">刪除警告</string>
    <string name="confirm_to_delete">確定要刪除此好友嗎?\n刪除好友後將會連聊天訊息一併刪除唷.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="please_add_some_content">寫點什麼都好....</string>
    <string name="upload_article">分享</string>
    <string name="share">分享</string>
    <string name="say_something">留下些甚麼....</string>
    <string name="chat_notice">加入好友後才可以私訊對方唷~*</string>
    <string name="send_invite_to_stranger">是否要傳送好友邀請給</string>
    <string name="confirm_to_delete_message">確定要刪除所有的訊息嗎?</string>
    <string name="equipment_list">裝備清單</string>
    <string name="add_equipment">增加清單</string>
    <string name="go_equipment_list">前往個人裝備清單</string>
    <string name="discuss_chat">登山\n即時討論區</string>
    <string name="share_news">登山\n動態分享</string>
    <string name="no_equipment_list">沒有任何個人的裝備清單唷,快去新增吧~</string>
    <string name="not_prepare">尚未準備</string>
    <string name="prepared">準備完成</string>
    <string name="add_repeat">已存在你的清單裡唷</string>
    <string name="seven_days">7日天氣預報</string>
    <string name="permission">權限通知</string>
    <string name="is_open_notification">是否開啟通知權限呢?</string>
    <string name="share_to_who">你的裝備清單想分享給誰呢?</string>
    <string name="no_friend">你目前沒有任何朋友唷...快去加別人好友吧...</string>
    <string name="share_successful">分享成功!</string>
    <string name="delete_notice">此為刪除整筆裝備清單(刪除後將不存在),確認是否要刪除整筆?</string>
    <string name="confirm_to_delete_single_data">確定要刪除此筆資料嗎?</string>
    <string name="enter_user_email">請輸入Email</string>
    <string name="search">搜尋</string>
    <string name="apply_friend">送出邀請</string>
    <string name="is_friend_already">已經是朋友了.</string>
    <string name="do_not_search_yourself">請不要沒事搜尋自己好嗎?</string>
    <string name="free_title">免責申明</string>
    <string name="free_content">本APP僅供科研、學習、保護隱私之用，切勿用於其他任何用途，嚴禁使用者違反當地相關法律，本應用不付任何相關責任．如不同意以上所述申明，請自覺移除此APP，使用本APP便默認同意以上所有申明，感謝您的配合與體諒，若此APP已侵犯到您任何地方請與我聯繫，謝謝．</string>
    <string name="contact_me">聯繫我</string>
    <string name="i_know">我知道了</string>
    <string name="email_body">有任何的問題請寫在下方,我會依依的回覆您,感謝</string>
    <string name="question_report">App問題信件</string>
    <string name="please_enter_lower">請小寫,謝謝您的合作</string>
    <string name="delete_article">刪除文章</string>
    <string name="edit">編輯</string>
    <string name="delete_notice_article">是否要刪除此文章?(刪除後將無法復原)</string>
    <string name="share_no_data">目前沒有任何資料可以顯示,快快分享你的動態吧!</string>
    <string name="impeachment">檢舉</string>
    <string name="truch">垃圾訊息</string>
    <string name="not_good_message">內容不適當</string>
    <string name="why_do_you_impeachment">為什麼你想要檢舉此篇文章呢?</string>
    <string name="impeachment_report">APP檢舉信件</string>
    <string name="uploading">上傳中....</string>
    <string name="send_photo">發送了一張圖片</string>
    <string name="select_share_person">選擇傳送對象</string>
    <string name="tool">功能</string>
    <string name="picture">圖片</string>
    <string name="search_result">搜尋結果</string>
    <string name="favorite">我的最愛</string>
    <string name="add_fav_sucess">已新增到我的最愛</string>
    <string name="already_top">已登頂</string>
    <string name="not_top">尚未登頂</string>
    <string name="vote">發起投票</string>
    <string name="create_vote">發起投票</string>
    <string name="vote_title">投票標題 : </string>
    <string name="please_enter_title">請輸入標題</string>
    <string name="vote_day_line">投票截止日 : </string>
    <string name="vote_number">投票項目數量</string>
    <string name="one">1</string>
    <string name="vote_item">投票項目</string>
    <string name="vote_list">投票所</string>
    <string name="voting">投票中</string>
    <string name="i_am_ready">我決定好了</string>
    <string name="vote_successful">投票成功</string>
    <string name="vote_already">你已經投過了唷</string>
    <string name="send_invitation_successful">已傳送好友邀請</string>
    <string name="vote_already_event">已結束的投票</string>
    <string name="the_end">已結束</string>
    <string name="search_mountain"><font size="15">請輸入要搜尋的百岳</font></string>
    <string name="no_vote_right_now">目前沒有任何人發起投票</string>
    <string name="no_favorite">還沒有任何山加入你的最愛唷,快去加吧..</string>
    <string name="donate">贊助</string>
    <string name="buy_me_drink">請我一杯飲料</string>
    <string name="i_pay">我請客</string>
    <string name="buy">購買</string>
    <string name="single_buy">單一次贊助</string>
    <string name="loop_buy">週期性贊助</string>
    <string name="need_to_update">有新的版本可以更新</string>
    <string name="search_a_new_version">偵測到有新版本,可以立即前往更新唷~*</string>
    <string name="go_to_update">前往更新</string>
    <string name="error_title">錯誤訊息</string>
    <string name="donate_list_empty">支付錯誤</string>
</resources>
