<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/register_title"
        android:text="@string/register"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_display_name"
        android:text="@string/display_name"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_edit_display_name"
        android:hint="@string/input_display_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/register_display_name"
        app:layout_constraintBottom_toBottomOf="@id/register_display_name"
        app:layout_constraintLeft_toLeftOf="@id/register_edit_email"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_email"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="45dp"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintTop_toBottomOf="@id/register_display_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_edit_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_email_style"
        app:layout_constraintTop_toTopOf="@id/register_email"
        app:layout_constraintBottom_toBottomOf="@id/register_email"
        app:layout_constraintLeft_toRightOf="@id/register_email"
        android:layout_marginStart="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_password"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintTop_toBottomOf="@id/register_edit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_edit_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/input_password"
        app:layout_constraintTop_toTopOf="@id/register_password"
        app:layout_constraintBottom_toBottomOf="@id/register_password"
        app:layout_constraintLeft_toLeftOf="@id/register_edit_email"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_text_processing"
        android:text="@string/processing"
        android:visibility="gone"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/register_edit_password"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_text_processing"
        android:text="@string/register"
        android:background="@drawable/btn_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
