<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_height="wrap_content">


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/create_vote_tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/vote_title"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/create_vote_edit_title"
        app:layout_constraintTop_toTopOf="@id/create_vote_tv_title"
        app:layout_constraintBottom_toBottomOf="@id/create_vote_tv_title"
        app:layout_constraintLeft_toRightOf="@id/create_vote_tv_title"
        android:layout_marginStart="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/please_enter_title"
        android:lines="1"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/create_vote_tv_day_line"
        app:layout_constraintTop_toBottomOf="@id/create_vote_tv_title"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/vote_day_line"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/create_vote_edit_day_line"
        android:layout_width="@dimen/vote_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/create_vote_tv_day_line"
        app:layout_constraintLeft_toRightOf="@id/create_vote_tv_day_line"
        app:layout_constraintTop_toTopOf="@id/create_vote_tv_day_line"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/create_vote_iv_calendar"
        android:src="@drawable/calendar"
        app:layout_constraintTop_toTopOf="@id/create_vote_tv_day_line"
        app:layout_constraintBottom_toBottomOf="@id/create_vote_tv_day_line"
        app:layout_constraintLeft_toRightOf="@id/create_vote_edit_day_line"
        android:layout_marginStart="5dp"
        android:layout_width="@dimen/smaller_icon_size_vote"
        android:layout_height="@dimen/smaller_icon_size_vote"/>

    <TextView
        android:id="@+id/create_vote_tv_number"
        app:layout_constraintTop_toBottomOf="@id/create_vote_tv_day_line"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/vote_number"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/create_vote_tv_spinner"
        android:gravity="center"
        android:text="@string/one"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="@id/create_vote_tv_number"
        app:layout_constraintBottom_toBottomOf="@id/create_vote_tv_number"
        app:layout_constraintLeft_toRightOf="@id/create_vote_tv_number"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_selector"
        android:layout_width="@dimen/vote_tv_number_width"
        android:layout_height="wrap_content"/>

    <ImageView
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="@id/create_vote_tv_spinner"
        app:layout_constraintBottom_toBottomOf="@id/create_vote_tv_spinner"
        app:layout_constraintRight_toRightOf="@id/create_vote_tv_spinner"
        android:src="@drawable/icn_vod_dropdown"
        android:layout_marginEnd="3dp"
        android:layout_width="@dimen/very_small_icon"
        android:layout_height="@dimen/very_small_icon"/>

    <LinearLayout
        android:id="@+id/create_vote_add_linear_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_vote_tv_number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/create_vote_btn"
        app:layout_constraintTop_toBottomOf="@id/create_vote_add_linear_layout"
        android:text="@string/create_vote"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>
